gateway-constraints/constraint-gateway-i.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAllGateway
metadata:
  name: deny-all-gateways
spec:
  match:
    kinds:
      - apiGroups: ["networking.istio.io"]
        kinds: ["Gateway"]
